--- a/portfolio_css/skills.css
+++ b/portfolio_css/skills.css
@@ -9,7 +9,7 @@ body {
 .header {
     padding: 30px;
     text-align: right;
-    background-image: url("/Users/ggarcia/Desktop/Coding Temple/portfolio_project/photos/shutterstock_1229824441.png");
+    background-image: url("../photos/shutterstock_1229824441.png");
     background-repeat: no-repeat;
     background-size: 1111px;
     border: 5px double;
