--- a/resume.css
+++ b/resume.css
@@ -9,8 +9,7 @@ body {
 .header {
     padding: 30px;
     text-align: right;
-    background-image: url("../photos/shutterstock_1229824441.png");
-    background-repeat: no-repeat;
+    background-image: url("./photos/shutterstock_1229824441.png");    background-repeat: no-repeat;
     background-size: 1111px;
     border: 5px double;
 }
@@ -41,7 +40,7 @@ li {
 }
 li a {
     display: inline-block;
-    color: lightgray;
+    color:lightgray;
     padding: 14px 16px;
     margin: auto;
     text-decoration: none;
@@ -52,7 +51,7 @@ li a:hoover {
 .active {
     background-color: #136979;
 }
-.skills {
+.resume {
     background-color: #136979;
     padding: 20px;
     margin-top: 20px;
@@ -63,6 +62,9 @@ li a:hoover {
 }
 h3 {
     color: black;
+}
+a {
+    color: white;
 }
 a:hover{
     color: #5de0e9;
